// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Banner /> Alert story renders snapshot 1`] = `
<article
  class="bannerDialog horizontal colorAlert"
>
  <div
    class="iconContainer iconAlert"
  >
    <svg
      class="icon"
      fill="currentColor"
      role="img"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="5"
      >
        alert
      </title>
      <use
        xlink:href="test-file-stub#dangerous"
      />
    </svg>
  </div>
  <div
    class="textAndAction horizontal"
  >
    <div
      class="textContent horizontal"
    >
      <h1
        class="heading heading--size-h3"
        color="inherit"
      >
        New curriculum updates are available for one or more of your courses.
      </h1>
       
      <p
        class="text text--body"
        color="inherit"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates, click into the course.
      </p>
    </div>
  </div>
</article>
`;

exports[`<Banner /> AlertDismissable story renders snapshot 1`] = `
<article
  class="bannerDialog horizontal dismissable colorAlert"
>
  <button
    class="dismiss button sizeLarge variantPlain colorAlert"
    type="button"
  >
    <svg
      class="icon"
      fill="currentColor"
      height="1.75rem"
      role="img"
      style="--icon-size: 1.75rem;"
      width="1.75rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="17"
      >
        dismiss banner
      </title>
      <use
        xlink:href="test-file-stub#close"
      />
    </svg>
  </button>
  <div
    class="iconContainer iconAlert"
  >
    <svg
      class="icon"
      fill="currentColor"
      role="img"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="18"
      >
        alert
      </title>
      <use
        xlink:href="test-file-stub#dangerous"
      />
    </svg>
  </div>
  <div
    class="textAndAction horizontal"
  >
    <div
      class="textContent horizontal"
    >
      <h1
        class="heading heading--size-h3"
        color="inherit"
      >
        New curriculum updates are available for one or more of your courses.
      </h1>
       
      <p
        class="text text--body"
        color="inherit"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates, click into the course.
      </p>
    </div>
  </div>
</article>
`;

exports[`<Banner /> Brand story renders snapshot 1`] = `
<article
  class="bannerDialog horizontal colorBrand"
>
  <div
    class="iconContainer iconBrand"
  >
    <svg
      class="icon"
      fill="currentColor"
      role="img"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="1"
      >
        attention
      </title>
      <use
        xlink:href="test-file-stub#notifications"
      />
    </svg>
  </div>
  <div
    class="textAndAction horizontal"
  >
    <div
      class="textContent horizontal"
    >
      <h1
        class="heading heading--size-h3"
        color="inherit"
      >
        New curriculum updates are available for one or more of your courses.
      </h1>
       
      <p
        class="text text--body"
        color="inherit"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates, click into the course.
      </p>
    </div>
  </div>
</article>
`;

exports[`<Banner /> BrandDismissable story renders snapshot 1`] = `
<article
  class="bannerDialog horizontal dismissable colorBrand"
>
  <button
    class="dismiss button sizeLarge variantPlain colorBrand"
    type="button"
  >
    <svg
      class="icon"
      fill="currentColor"
      height="1.75rem"
      role="img"
      style="--icon-size: 1.75rem;"
      width="1.75rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="9"
      >
        dismiss banner
      </title>
      <use
        xlink:href="test-file-stub#close"
      />
    </svg>
  </button>
  <div
    class="iconContainer iconBrand"
  >
    <svg
      class="icon"
      fill="currentColor"
      role="img"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="10"
      >
        attention
      </title>
      <use
        xlink:href="test-file-stub#notifications"
      />
    </svg>
  </div>
  <div
    class="textAndAction horizontal"
  >
    <div
      class="textContent horizontal"
    >
      <h1
        class="heading heading--size-h3"
        color="inherit"
      >
        New curriculum updates are available for one or more of your courses.
      </h1>
       
      <p
        class="text text--body"
        color="inherit"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates, click into the course.
      </p>
    </div>
  </div>
</article>
`;

exports[`<Banner /> DismissableWithAction story renders snapshot 1`] = `
<article
  class="bannerDialog horizontal dismissable colorBrand"
>
  <button
    class="dismiss button sizeLarge variantPlain colorBrand"
    type="button"
  >
    <svg
      class="icon"
      fill="currentColor"
      height="1.75rem"
      role="img"
      style="--icon-size: 1.75rem;"
      width="1.75rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="19"
      >
        dismiss banner
      </title>
      <use
        xlink:href="test-file-stub#close"
      />
    </svg>
  </button>
  <div
    class="iconContainer iconBrand"
  >
    <svg
      class="icon"
      fill="currentColor"
      role="img"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="20"
      >
        attention
      </title>
      <use
        xlink:href="test-file-stub#notifications"
      />
    </svg>
  </div>
  <div
    class="textAndAction horizontal"
  >
    <div
      class="textContent horizontal"
    >
      <h1
        class="heading heading--size-h3"
        color="inherit"
      >
        New curriculum updates are available for one or more of your courses.
      </h1>
       
      <p
        class="text text--body"
        color="inherit"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates, click into the course.
      </p>
    </div>
    <div
      class="action horizontal"
    >
      <button
        class="button sizeLarge variantOutline colorBrand"
        style="white-space: nowrap;"
        type="button"
      >
        See updates
      </button>
    </div>
  </div>
</article>
`;

exports[`<Banner /> Elevation0 story renders snapshot 1`] = `
<article
  class="bannerDialog horizontal elevation0 colorBrand"
>
  <div
    class="iconContainer iconBrand"
  >
    <svg
      class="icon"
      fill="currentColor"
      role="img"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="27"
      >
        attention
      </title>
      <use
        xlink:href="test-file-stub#notifications"
      />
    </svg>
  </div>
  <div
    class="textAndAction horizontal"
  >
    <div
      class="textContent horizontal"
    >
      <h1
        class="heading heading--size-h3"
        color="inherit"
      >
        New curriculum updates are available for one or more of your courses.
      </h1>
       
      <p
        class="text text--body"
        color="inherit"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates, click into the course.
      </p>
    </div>
  </div>
</article>
`;

exports[`<Banner /> Neutral story renders snapshot 1`] = `
<article
  class="bannerDialog horizontal colorNeutral"
>
  <div
    class="iconContainer iconNeutral"
  >
    <svg
      class="icon"
      fill="currentColor"
      role="img"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="2"
      >
        notice
      </title>
      <use
        xlink:href="test-file-stub#forum"
      />
    </svg>
  </div>
  <div
    class="textAndAction horizontal"
  >
    <div
      class="textContent horizontal"
    >
      <h1
        class="heading heading--size-h3"
        color="inherit"
      >
        New curriculum updates are available for one or more of your courses.
      </h1>
       
      <p
        class="text text--body"
        color="inherit"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates, click into the course.
      </p>
    </div>
  </div>
</article>
`;

exports[`<Banner /> NeutralDismissable story renders snapshot 1`] = `
<article
  class="bannerDialog horizontal dismissable colorNeutral"
>
  <button
    class="dismiss button sizeLarge variantPlain colorNeutral"
    type="button"
  >
    <svg
      class="icon"
      fill="currentColor"
      height="1.75rem"
      role="img"
      style="--icon-size: 1.75rem;"
      width="1.75rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="11"
      >
        dismiss banner
      </title>
      <use
        xlink:href="test-file-stub#close"
      />
    </svg>
  </button>
  <div
    class="iconContainer iconNeutral"
  >
    <svg
      class="icon"
      fill="currentColor"
      role="img"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="12"
      >
        notice
      </title>
      <use
        xlink:href="test-file-stub#forum"
      />
    </svg>
  </div>
  <div
    class="textAndAction horizontal"
  >
    <div
      class="textContent horizontal"
    >
      <h1
        class="heading heading--size-h3"
        color="inherit"
      >
        New curriculum updates are available for one or more of your courses.
      </h1>
       
      <p
        class="text text--body"
        color="inherit"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates, click into the course.
      </p>
    </div>
  </div>
</article>
`;

exports[`<Banner /> NoContent story renders snapshot 1`] = `
<article
  class="bannerDialog horizontal colorBrand"
>
  <div
    class="iconContainer iconBrand"
  >
    <svg
      class="icon"
      fill="currentColor"
      role="img"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="7"
      >
        attention
      </title>
      <use
        xlink:href="test-file-stub#notifications"
      />
    </svg>
  </div>
  <div
    class="textAndAction horizontal"
  >
    <div
      class="textContent horizontal"
    >
      <h1
        class="heading heading--size-h3"
        color="inherit"
      >
        New curriculum updates are available for one or more of your courses.
      </h1>
       
    </div>
  </div>
</article>
`;

exports[`<Banner /> NoHeadingShort story renders snapshot 1`] = `
<article
  class="bannerDialog horizontal colorBrand"
>
  <div
    class="iconContainer iconBrand"
  >
    <svg
      class="icon"
      fill="currentColor"
      role="img"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="6"
      >
        attention
      </title>
      <use
        xlink:href="test-file-stub#notifications"
      />
    </svg>
  </div>
  <div
    class="textAndAction horizontal"
  >
    <div
      class="textContent horizontal"
    >
       
      <p
        class="text text--body"
        color="inherit"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates, click into the course.
      </p>
    </div>
  </div>
</article>
`;

exports[`<Banner /> Success story renders snapshot 1`] = `
<article
  class="bannerDialog horizontal colorSuccess"
>
  <div
    class="iconContainer iconSuccess"
  >
    <svg
      class="icon"
      fill="currentColor"
      role="img"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="3"
      >
        success
      </title>
      <use
        xlink:href="test-file-stub#check-circle"
      />
    </svg>
  </div>
  <div
    class="textAndAction horizontal"
  >
    <div
      class="textContent horizontal"
    >
      <h1
        class="heading heading--size-h3"
        color="inherit"
      >
        New curriculum updates are available for one or more of your courses.
      </h1>
       
      <p
        class="text text--body"
        color="inherit"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates, click into the course.
      </p>
    </div>
  </div>
</article>
`;

exports[`<Banner /> SuccessDismissable story renders snapshot 1`] = `
<article
  class="bannerDialog horizontal dismissable colorSuccess"
>
  <button
    class="dismiss button sizeLarge variantPlain colorSuccess"
    type="button"
  >
    <svg
      class="icon"
      fill="currentColor"
      height="1.75rem"
      role="img"
      style="--icon-size: 1.75rem;"
      width="1.75rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="13"
      >
        dismiss banner
      </title>
      <use
        xlink:href="test-file-stub#close"
      />
    </svg>
  </button>
  <div
    class="iconContainer iconSuccess"
  >
    <svg
      class="icon"
      fill="currentColor"
      role="img"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="14"
      >
        success
      </title>
      <use
        xlink:href="test-file-stub#check-circle"
      />
    </svg>
  </div>
  <div
    class="textAndAction horizontal"
  >
    <div
      class="textContent horizontal"
    >
      <h1
        class="heading heading--size-h3"
        color="inherit"
      >
        New curriculum updates are available for one or more of your courses.
      </h1>
       
      <p
        class="text text--body"
        color="inherit"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates, click into the course.
      </p>
    </div>
  </div>
</article>
`;

exports[`<Banner /> Vertical story renders snapshot 1`] = `
<article
  class="bannerDialog colorBrand"
>
  <div
    class="iconContainer iconBrand"
  >
    <svg
      class="icon"
      fill="currentColor"
      role="img"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="21"
      >
        attention
      </title>
      <use
        xlink:href="test-file-stub#notifications"
      />
    </svg>
  </div>
  <div
    class="textAndAction"
  >
    <div
      class="textContent"
    >
      <h1
        class="heading heading--size-h3"
        color="inherit"
      >
        New curriculum updates are available for one or more of your courses.
      </h1>
       
      <p
        class="text text--body"
        color="inherit"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates, click into the course.
      </p>
    </div>
  </div>
</article>
`;

exports[`<Banner /> VerticalDismissable story renders snapshot 1`] = `
<article
  class="bannerDialog dismissable colorBrand"
>
  <button
    class="dismiss button sizeLarge variantPlain colorBrand"
    type="button"
  >
    <svg
      class="icon"
      fill="currentColor"
      height="1.75rem"
      role="img"
      style="--icon-size: 1.75rem;"
      width="1.75rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="22"
      >
        dismiss banner
      </title>
      <use
        xlink:href="test-file-stub#close"
      />
    </svg>
  </button>
  <div
    class="iconContainer iconBrand"
  >
    <svg
      class="icon"
      fill="currentColor"
      role="img"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="23"
      >
        attention
      </title>
      <use
        xlink:href="test-file-stub#notifications"
      />
    </svg>
  </div>
  <div
    class="textAndAction"
  >
    <div
      class="textContent"
    >
      <h1
        class="heading heading--size-h3"
        color="inherit"
      >
        New curriculum updates are available for one or more of your courses.
      </h1>
       
      <p
        class="text text--body"
        color="inherit"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates, click into the course.
      </p>
    </div>
  </div>
</article>
`;

exports[`<Banner /> VerticalDismissableWithAction story renders snapshot 1`] = `
<article
  class="bannerDialog dismissable colorBrand"
>
  <button
    class="dismiss button sizeLarge variantPlain colorBrand"
    type="button"
  >
    <svg
      class="icon"
      fill="currentColor"
      height="1.75rem"
      role="img"
      style="--icon-size: 1.75rem;"
      width="1.75rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="25"
      >
        dismiss banner
      </title>
      <use
        xlink:href="test-file-stub#close"
      />
    </svg>
  </button>
  <div
    class="iconContainer iconBrand"
  >
    <svg
      class="icon"
      fill="currentColor"
      role="img"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="26"
      >
        attention
      </title>
      <use
        xlink:href="test-file-stub#notifications"
      />
    </svg>
  </div>
  <div
    class="textAndAction"
  >
    <div
      class="textContent"
    >
      <h1
        class="heading heading--size-h3"
        color="inherit"
      >
        New curriculum updates are available for one or more of your courses.
      </h1>
       
      <p
        class="text text--body"
        color="inherit"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates, click into the course.
      </p>
    </div>
    <div
      class="action"
    >
      <button
        class="button sizeLarge variantOutline colorBrand"
        style="white-space: nowrap;"
        type="button"
      >
        See updates
      </button>
    </div>
  </div>
</article>
`;

exports[`<Banner /> VerticalElevation0 story renders snapshot 1`] = `
<article
  class="bannerDialog elevation0 colorBrand"
>
  <div
    class="iconContainer iconBrand"
  >
    <svg
      class="icon"
      fill="currentColor"
      role="img"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="28"
      >
        attention
      </title>
      <use
        xlink:href="test-file-stub#notifications"
      />
    </svg>
  </div>
  <div
    class="textAndAction"
  >
    <div
      class="textContent"
    >
      <h1
        class="heading heading--size-h3"
        color="inherit"
      >
        New curriculum updates are available for one or more of your courses.
      </h1>
       
      <p
        class="text text--body"
        color="inherit"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates, click into the course.
      </p>
    </div>
  </div>
</article>
`;

exports[`<Banner /> VerticalWithAction story renders snapshot 1`] = `
<article
  class="bannerDialog colorBrand"
>
  <div
    class="iconContainer iconBrand"
  >
    <svg
      class="icon"
      fill="currentColor"
      role="img"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="24"
      >
        attention
      </title>
      <use
        xlink:href="test-file-stub#notifications"
      />
    </svg>
  </div>
  <div
    class="textAndAction"
  >
    <div
      class="textContent"
    >
      <h1
        class="heading heading--size-h3"
        color="inherit"
      >
        New curriculum updates are available for one or more of your courses.
      </h1>
       
      <p
        class="text text--body"
        color="inherit"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates, click into the course.
      </p>
    </div>
    <div
      class="action"
    >
      <button
        class="button sizeLarge variantOutline colorBrand"
        style="white-space: nowrap;"
        type="button"
      >
        See updates
      </button>
    </div>
  </div>
</article>
`;

exports[`<Banner /> Warning story renders snapshot 1`] = `
<article
  class="bannerDialog horizontal colorWarning"
>
  <div
    class="iconContainer iconWarning"
  >
    <svg
      class="icon"
      fill="currentColor"
      role="img"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="4"
      >
        warning
      </title>
      <use
        xlink:href="test-file-stub#warning"
      />
    </svg>
  </div>
  <div
    class="textAndAction horizontal"
  >
    <div
      class="textContent horizontal"
    >
      <h1
        class="heading heading--size-h3"
        color="inherit"
      >
        New curriculum updates are available for one or more of your courses.
      </h1>
       
      <p
        class="text text--body"
        color="inherit"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates, click into the course.
      </p>
    </div>
  </div>
</article>
`;

exports[`<Banner /> WarningDismissable story renders snapshot 1`] = `
<article
  class="bannerDialog horizontal dismissable colorWarning"
>
  <button
    class="dismiss button sizeLarge variantPlain colorWarning"
    type="button"
  >
    <svg
      class="icon"
      fill="currentColor"
      height="1.75rem"
      role="img"
      style="--icon-size: 1.75rem;"
      width="1.75rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="15"
      >
        dismiss banner
      </title>
      <use
        xlink:href="test-file-stub#close"
      />
    </svg>
  </button>
  <div
    class="iconContainer iconWarning"
  >
    <svg
      class="icon"
      fill="currentColor"
      role="img"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="16"
      >
        warning
      </title>
      <use
        xlink:href="test-file-stub#warning"
      />
    </svg>
  </div>
  <div
    class="textAndAction horizontal"
  >
    <div
      class="textContent horizontal"
    >
      <h1
        class="heading heading--size-h3"
        color="inherit"
      >
        New curriculum updates are available for one or more of your courses.
      </h1>
       
      <p
        class="text text--body"
        color="inherit"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates, click into the course.
      </p>
    </div>
  </div>
</article>
`;

exports[`<Banner /> WithAction story renders snapshot 1`] = `
<article
  class="bannerDialog horizontal colorBrand"
>
  <div
    class="iconContainer iconBrand"
  >
    <svg
      class="icon"
      fill="currentColor"
      role="img"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="8"
      >
        attention
      </title>
      <use
        xlink:href="test-file-stub#notifications"
      />
    </svg>
  </div>
  <div
    class="textAndAction horizontal"
  >
    <div
      class="textContent horizontal"
    >
      <h1
        class="heading heading--size-h3"
        color="inherit"
      >
        New curriculum updates are available for one or more of your courses.
      </h1>
       
      <p
        class="text text--body"
        color="inherit"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates, click into the course.
      </p>
    </div>
    <div
      class="action horizontal"
    >
      <button
        class="button sizeLarge variantOutline colorBrand"
        style="white-space: nowrap;"
        type="button"
      >
        See updates
      </button>
    </div>
  </div>
</article>
`;
